fix: AboutDialog migration, LICENSE, remove man pages, build fixes
- Adw.AboutWindow → Adw.AboutDialog (deprecated, removed in Ubuntu 26.04)
- Add GPL-3.0 LICENSE file
- Remove man pages (GUI app, not CLI)
- Fix build-rpm.yml (was copy-paste of ha-l10n)
- Add build-deb.yml CI workflow
- Add [project.gui-scripts] to pyproject.toml
- Fix app name references

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,6 @@ description = "MQTT message inspector for IoT"
 authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
 license = {text = "GPL-3.0-or-later"}
 requires-python = ">=3.10"
+
+[project.gui-scripts]
+mqtt-inspector = "mqtt_inspector.main:main"
