--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -83,7 +83,7 @@ jobs:
           rpmbuild -ba ~/rpmbuild/SPECS/mqtt-inspector.spec
 
       - name: Upload RPM to release
-        if: always()
+        if: github.event_name == 'release'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
